--- a/tests/bluetooth/host/crypto/prng_init/prj.conf
+++ b/tests/bluetooth/host/crypto/prng_init/prj.conf
@@ -7,3 +7,7 @@ CONFIG_ASSERT=y
 CONFIG_ASSERT_LEVEL=2
 CONFIG_ASSERT_VERBOSE=y
 CONFIG_ASSERT_ON_ERRORS=y
+
+CONFIG_LOG=n
+CONFIG_BT_DEBUG_LOG=n
+CONFIG_TEST_LOGGING_DEFAULTS=n
