boards: arm: enabling hsi48 for RNG peripheral on stm32 platforms
The different boards with stm32 which have node enabled in their DTS
also requires the HSI48 clock to be enabled.

Signed-off-by: Francois Ramu <francois.ramu@st.com>

--- a/boards/arm/stm32l562e_dk/stm32l562e_dk_common.dtsi
+++ b/boards/arm/stm32l562e_dk/stm32l562e_dk_common.dtsi
@@ -59,6 +59,10 @@
 	cpu-power-states = <&stop0 &stop1 &stop2>;
 };
 
+&clk_hsi48 {
+	status = "okay";
+};
+
 &clk_msi {
 	status = "okay";
 	msi-range = <6>;
