scripts: add script for merging Twister reports
When tests are build by Twister with --subset option, then several
twister.json reports are produced. To make it possible to run then
--test-only it is necessary to merge them together. Moreover this
script allows to introduce filtration of tests which will be placed in
final merged report.

Signed-off-by: Piotr Golyzniak <piotr.golyzniak@nordicsemi.no>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -727,6 +727,7 @@ scripts/build/gen_image_info.py           @tejlmand
 /scripts/tracing/                         @nashif
 /scripts/pylib/twister/                   @nashif
 /scripts/twister                          @nashif
+/scripts/twister_reports_merge.py         @gopiotr
 /scripts/series-push-hook.sh              @erwango
 /scripts/utils/pinctrl_nrf_migrate.py     @gmarull
 /scripts/west_commands/                   @mbolivar-nordic
