--- a/boards/arm/zb_tv_h743zi/zb_tv_h743zi.dts
+++ b/boards/arm/zb_tv_h743zi/zb_tv_h743zi.dts
@@ -283,7 +283,7 @@ zephyr_udc0: &usbotg_hs {
 	pinctrl-0 = <&i2c1_scl_pb6 &i2c1_sda_pb7>;
     pinctrl-names = "default";
 	status = "okay";
-	clock-frequency = <I2C_BITRATE_FAST>;
+	clock-frequency = <I2C_BITRATE_STANDARD>;
 
     ti_tmp116_int: ti_tmp116@48 {
 		compatible = "ti,tmp116";
