github: compliance: add a second run on the original changes
Add a second compliance check run on the original commits (not the
rebased ones). This allows detecting merges when a user merges back
against main using the GitHub UI.

Only enable the MergeCommits check in that run.

Signed-off-by: Fabio Baltieri <fabiobaltieri@google.com>

--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -43,6 +43,18 @@ jobs:
         west init -l . || true
         west update 2>&1 1> west.update.log || west update 2>&1 1> west.update2.log
 
+    - name: Run Compliance Tests (no rebase)
+      continue-on-error: true
+      id: compliance-norebase
+      env:
+        BASE_REF: ${{ github.base_ref }}
+        PR_SHA: ${{ github.event.pull_request.head.sha }}
+      run: |
+        export ZEPHYR_BASE=$PWD
+        git log --pretty=oneline origin/${BASE_REF}..${PR_SHA}
+        ./scripts/ci/check_compliance.py --annotate -m MergeCommits \
+        -c origin/${BASE_REF}..${PR_SHA}
+
     - name: Run Compliance Tests
       continue-on-error: true
       id: compliance
