--- a/boards/arm/swan_r5/swan_r5.dts
+++ b/boards/arm/swan_r5/swan_r5.dts
@@ -42,7 +42,7 @@
 	};
 
 	supply-3v3 {
-		compatible = "regulator-fixed-sync", "regulator-fixed";
+		compatible = "regulator-fixed";
 		regulator-name = "supply-3v3";
 		enable-gpios = <&gpioe 4 GPIO_ACTIVE_HIGH>;
 		regulator-boot-on;
