--- a/samples/bluetooth/hci_rpmsg/nrf5340_cpunet_iso_broadcast-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_rpmsg/nrf5340_cpunet_iso_broadcast-bt_ll_sw_split.conf
@@ -23,17 +23,20 @@ CONFIG_BT_CENTRAL=n
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_PER_ADV=y
 CONFIG_BT_ISO_BROADCASTER=y
-CONFIG_BT_ISO_MAX_CHAN=2
+CONFIG_BT_ISO_MAX_CHAN=4
 
 # ISO Broadcast Controller
 CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_CTLR_ADV_PERIODIC=y
 CONFIG_BT_CTLR_ADV_DATA_LEN_MAX=191
 CONFIG_BT_CTLR_ADV_ISO=y
-CONFIG_BT_CTLR_ADV_ISO_PDU_LEN_MAX=251
 CONFIG_BT_CTLR_ISO_TX_BUFFERS=16
-CONFIG_BT_CTLR_ISO_TX_BUFFER_SIZE=251
-CONFIG_BT_CTLR_ADV_ISO_STREAM_MAX=2
+CONFIG_BT_CTLR_ISO_TX_BUFFER_SIZE=255
+CONFIG_BT_CTLR_ADV_ISO_PDU_LEN_MAX=251
+CONFIG_BT_CTLR_ADV_ISO_STREAM_MAX=4
 
 CONFIG_BT_CTLR_ADVANCED_FEATURES=y
 CONFIG_BT_CTLR_ADV_RESERVE_MAX=n
+
+# Disable UART
+CONFIG_SERIAL=n
