--- a/samples/bluetooth/hci_rpmsg/nrf5340_cpunet_iso_receive-bt_ll_sw_split.conf
+++ b/samples/bluetooth/hci_rpmsg/nrf5340_cpunet_iso_receive-bt_ll_sw_split.conf
@@ -23,7 +23,7 @@ CONFIG_BT_CENTRAL=n
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_PER_ADV_SYNC=y
 CONFIG_BT_ISO_SYNC_RECEIVER=y
-CONFIG_BT_ISO_MAX_CHAN=2
+CONFIG_BT_ISO_MAX_CHAN=4
 
 # ISO Receive Controller
 CONFIG_BT_LL_SW_SPLIT=y
@@ -31,5 +31,8 @@ CONFIG_BT_CTLR_SYNC_PERIODIC=y
 CONFIG_BT_CTLR_SCAN_DATA_LEN_MAX=191
 CONFIG_BT_CTLR_SYNC_ISO=y
 CONFIG_BT_CTLR_SYNC_ISO_PDU_LEN_MAX=251
-CONFIG_BT_CTLR_SYNC_ISO_STREAM_MAX=2
-CONFIG_BT_CTLR_ISOAL_SINKS=2
+CONFIG_BT_CTLR_SYNC_ISO_STREAM_MAX=4
+CONFIG_BT_CTLR_ISOAL_SINKS=4
+
+# Disable UART
+CONFIG_SERIAL=n
