--- a/dts/arm/nordic/nrf54l_common.dtsi
+++ b/dts/arm/nordic/nrf54l_common.dtsi
@@ -25,6 +25,12 @@
 
 	chosen {
 		zephyr,flash-controller = &rram_controller;
+		zephyr,entropy = &psa_rng;
+	};
+
+	psa_rng: psa-rng {
+		compatible = "zephyr,psa-crypto-rng";
+		status = "okay";
 	};
 
 	sw_pwm: sw-pwm {
