--- a/boards/nxp/mimxrt700_evk/mimxrt700_evk-pinctrl.dtsi
+++ b/boards/nxp/mimxrt700_evk/mimxrt700_evk-pinctrl.dtsi
@@ -33,4 +33,14 @@
 			drive-strength = "normal";
 		};
 	};
+
+	pinmux_lpadc0: pinmux_lpadc0 {
+		group0 {
+			pinmux = <ADC0_CH0_PIO10_0>,
+				<ADC0_CH1_PIO10_2>;
+			slew-rate = "normal";
+			drive-strength = "normal";
+			nxp,analog-mode;
+		};
+	};
 };
