--- a/soc/litex/litex_vexriscv/CMakeLists.txt
+++ b/soc/litex/litex_vexriscv/CMakeLists.txt
@@ -1,5 +1,5 @@
-#
-# Copyright (c) 2018 - 2019 Antmicro <www.antmicro.com>
+# SPDX-FileCopyrightText: Copyright The Zephyr Project Contributors
+# SPDX-FileCopyrightText: Copyright (c) 2018 - 2019 Antmicro <www.antmicro.com>
 #
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -8,8 +8,6 @@ zephyr_sources(
     ${ZEPHYR_BASE}/soc/common/riscv-privileged/soc_irq.S
     ${ZEPHYR_BASE}/soc/common/riscv-privileged/vector.S
 )
-
-zephyr_sources_ifdef(CONFIG_REBOOT reboot.c)
 
 zephyr_include_directories(.)
 
