--- a/tests/crypto/mbedtls_psa/testcase.yaml
+++ b/tests/crypto/mbedtls_psa/testcase.yaml
@@ -26,6 +26,7 @@ common:
       - " PASS - test_generate_random.*"
       - " PASS - test_md5.*"
       - " PASS - test_sha1.*"
+      - " PASS - test_sha224.*"
 tests:
   crypto.mbedtls_psa.with_entropy_driver:
     filter: CONFIG_CSPRNG_ENABLED
