drivers: flash_mspi_nor: Assign quirks based on flash DT node property
Introduce "chip-family" enum property in the "jedec,mspi-nor" binding
as a way of specifying what special routines need to be use for a given
flash chip. This has the advantage over an additional compatible string
that users can see the possibilities in the binding documentation and
do not need to look into the driver code to find out those. Also any
typos in the enum value will be caught by the DT compiler, while for
the compatible string such typos would cause it to be silently ignored.

Signed-off-by: Andrzej Głąbek <andrzej.glabek@nordicsemi.no>

--- a/dts/bindings/mtd/jedec,mspi-nor.yaml
+++ b/dts/bindings/mtd/jedec,mspi-nor.yaml
@@ -21,6 +21,20 @@ include:
       - t-exit-dpd
 
 properties:
+  chip-family:
+    type: string
+    description: |
+      Some flash chips need special handling in certain aspects, for example,
+      to be configured properly at initialization. This property determines
+      what specific routines need to be used for the flash chip. If not set,
+      only generic handling is used.
+    enum:
+      - "mxicy,mx25r"
+      - "mxicy,mx25um"
+      - "mxicy,mx25uw"
+      - "mxicy,mx66um"
+      - "mxicy,mx66uw"
+
   reset-gpios:
     type: phandle-array
     description: |
