--- a/boards/nordic/nrf54h20dk/nrf54h20dk_nrf54h20_cpuapp.dts
+++ b/boards/nordic/nrf54h20dk/nrf54h20dk_nrf54h20_cpuapp.dts
@@ -269,9 +269,10 @@ slot3_partition: &cpurad_slot1_partition {
 	status = "disabled";
 
 	mx25uw63: mx25uw6345g@0 {
-		compatible = "mxicy,mx25u", "jedec,mspi-nor";
+		compatible = "jedec,mspi-nor";
 		status = "disabled";
 		reg = <0>;
+		chip-family = "mxicy,mx25uw";
 		jedec-id = [c2 84 37];
 		sfdp-bfp = [e5 20 8a ff ff ff ff 03 00 ff 00 ff 00 ff 00 ff
 			    ee ff ff ff ff ff 00 ff ff ff 00 ff 0c 20 10 d8
