--- a/tests/crypto/mbedtls_psa/testcase.yaml
+++ b/tests/crypto/mbedtls_psa/testcase.yaml
@@ -29,6 +29,7 @@ common:
       - " PASS - test_sha224.*"
       - " PASS - test_sha256.*"
       - " PASS - test_sha384.*"
+      - " PASS - test_sha512.*"
 tests:
   crypto.mbedtls_psa.with_entropy_driver:
     filter: CONFIG_CSPRNG_ENABLED
