--- a/dts/rx/renesas/rx130-common.dtsi
+++ b/dts/rx/renesas/rx130-common.dtsi
@@ -837,6 +837,15 @@
 			status = "disabled";
 		};
 
+		ctsu: ctsu@a0900 {
+			compatible = "renesas,rx-ctsu";
+			reg = < 0x000A0900 0x100 >;
+			clocks = <&pclkb MSTPD 10>;
+			interrupts = <60 1>, <61 1>, <62 1>;
+			interrupt-names = "ctsuwr", "ctsurd", "ctsufn";
+			status = "disabled";
+		};
+
 		ofsm: ofsm@ffffff80 {
 			compatible = "zephyr,memory-region";
 			reg = <0xFFFFFF80 0x0F>;
