--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1186,6 +1186,8 @@ Documentation Infrastructure:
     - carlescufi
     - nashif
   files:
+    - doc/requirements.in
+    - doc/requirements.txt
     - doc/_*/
     - doc/CMakeLists.txt
     - doc/conf.py
