--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -674,7 +674,9 @@ Board/SoC configuration:
     - "57300"
   files:
     - soc/Kconfig*
+    - soc/CMakeLists.txt
     - boards/Kconfig*
+    - boards/CMakeLists.txt
   labels:
     - "area: Board/SoC configuration"
 
