--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -4827,6 +4827,15 @@ Testing with Renode:
   labels:
     - "area: Renode"
 
+Tests:
+  status: maintained
+  maintainers:
+    - nashif
+  files:
+    - tests/
+  labels:
+    - "area: Tests"
+
 "Toolchain ARC MWDT":
   status: maintained
   maintainers:
