--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1126,8 +1126,6 @@ Documentation:
     - doc/introduction/
     - doc/project/
     - doc/releases/
-    - doc/security/
-    - doc/safety/
     - README.rst
     - doc/substitutions.txt
     - doc/images/Zephyr-Kite-in-tree.png
@@ -4405,6 +4403,16 @@ STM32 Wireless Platforms:
     STM32WB and STM32WBA SOCs, dts files and related drivers.
     STM32WB and STM32WBA development boards and ST bluetooth shields.
 
+Safety:
+  status: maintained
+  maintainers:
+    - tobiaskaestner
+    - parphane
+  files:
+    - doc/safety/
+  labels:
+    - "area: Safety"
+
 Samples:
   status: maintained
   maintainers:
@@ -4432,6 +4440,16 @@ Secure storage:
     - "area: Secure storage"
   tests:
     - psa.secure_storage
+
+Security:
+  status: maintained
+  maintainers:
+    - ceolin
+    - d3zd3z
+  files:
+    - doc/security/
+  labels:
+    - "area: Security"
 
 Seeed Studio Platforms:
   status: odd fixes
