--- a/drivers/rtc/CMakeLists.txt
+++ b/drivers/rtc/CMakeLists.txt
@@ -26,6 +26,7 @@ zephyr_library_sources_ifdef(CONFIG_RTC_MOTOROLA_MC146818 rtc_mc146818.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_NUMAKER rtc_numaker.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_NXP_IRTC rtc_nxp_irtc.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_PCF2123 rtc_pcf2123.c)
+zephyr_library_sources_ifdef(CONFIG_RTC_PCF85063A rtc_pcf85063a.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_PCF8523 rtc_pcf8523.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_PCF8563 rtc_pcf8563.c)
 zephyr_library_sources_ifdef(CONFIG_RTC_RPI_PICO rtc_rpi_pico.c)
