--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -56,6 +56,7 @@ source "drivers/rtc/Kconfig.mc146818"
 source "drivers/rtc/Kconfig.numaker"
 source "drivers/rtc/Kconfig.nxp_irtc"
 source "drivers/rtc/Kconfig.pcf2123"
+source "drivers/rtc/Kconfig.pcf85063a"
 source "drivers/rtc/Kconfig.pcf8523"
 source "drivers/rtc/Kconfig.pcf8563"
 source "drivers/rtc/Kconfig.rpi_pico"
