--- a/boards/st/stm32n6570_dk/stm32n6570_dk_common.dtsi
+++ b/boards/st/stm32n6570_dk/stm32n6570_dk_common.dtsi
@@ -336,6 +336,7 @@ zephyr_udc0: &usbotg_hs1 {
 		read-latency = <4>;
 		write-latency = <1>;
 		burst-length = <0>;
+		st,csbound = <11>;
 		status = "okay";
 	};
 };
