--- a/tests/drivers/uart/uart_basic_api/testcase.yaml
+++ b/tests/drivers/uart/uart_basic_api/testcase.yaml
@@ -16,7 +16,9 @@ tests:
     filter: CONFIG_UART_CONSOLE
     harness: keyboard
     arch_allow: arm
-    platform_allow: nucleo_h743zi
+    platform_allow:
+      - nucleo_h743zi
+      - nucleo_h753zi
     integration_platforms:
       - nucleo_h753zi
     extra_args: DTC_OVERLAY_FILE="boards/nucleo_h743zi.overlay"
